<resources>
    <string name="app_name">Covid19 Updates</string>
    <string name="splashscreen_text">Covid19 Updates</string>
    <string name="splash_header">GAD Community Project</string>
    <string name="confirmed_cases">Confirmed Cases</string>
    <string name="active_cases">Active Cases</string>
    <string name="recovered_cases">Recovered Cases</string>
    <string name="deaths">Deaths</string>
    <string name="zero_value">0</string>
    <string name="covid_19_world_data">Covid-19 World Data</string>
    <string name="check_country_specific_data">Check Country Specific Data</string>
    <string name="text_updated_at">Updated at</string>
    <string name="tv_country_popn">Population</string>
    <string name="recovery_rate">Recovery Rate</string>
    <string name="death_rate">Death Rate</string>
    <string name="today">TODAY</string>
    <string name="cases_per_million">Cases per million</string>
    <string name="others">RATES</string>
    <string name="country_name">Country Name</string>
    <string name="credits_menu_title">Credits</string>
    <string name="text_emmanuel">Emmanuel Ameh</string>
    <string name="text_joshua">Joshua Eselebor</string>
    <string name="text_obiamaka">Obiamaka Nzekwu</string>
    <string name="text_gbolahan">Gbolahan Awoseyila</string>
    <string name="source_corona_api">https://corona-api.com/countries</string>
    <string name="source_covid19api">https://api.covid19api.com/summary</string>
    <string name="text_share_action">Share COVID 19 Data</string>
    <string name="contributors">Contributors</string>
    <string name="sources">Sources</string>
    <string name="search">Search</string>
</resources>